fix: new-invoice-btn display on mobile size

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -62,6 +62,7 @@
 
 .btn-new-invoice {
     border: none;
+    min-width: 6rem;
     background-color: base.$clr-blue-400;
     border-radius: 24px;
     padding: calc(base.$spacer1 / 2);
@@ -72,6 +73,7 @@
 
 .btn-label {
     @include utils.fonts(base.$clr-white-100, base.$fs-15, 700);
+    gap: 0;
 }
 
 .btn-return {
