--- a/src/sass/pages/_page.scss
+++ b/src/sass/pages/_page.scss
@@ -25,7 +25,7 @@
 }
 
 span.container-img {
-    padding: calc(base.$spacer1 * 0.5);
+    padding: calc(base.$spacer1 * 0.75);
     background: base.$clr-white-100;
     border-radius: 50%;
 }
